# schemavore

./: .gitignore  pyproject.toml
src/schemavore/: __init__.py  __main__.py  cli.py  config.py  domain.py  history.py  memories.py  memory_store.py  privacy.py  profiler.py
src/schemavore/providers/: __init__.py  base.py  gemini.py  openai_compatible.py
tests/: test_config.py  test_domain.py  test_history.py  test_memories.py  test_memory_store.py  test_privacy.py  test_profiler.py  test_providers_base.py  test_providers_gemini.py  test_providers_openai_compatible.py
