[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "schemavore"
version = "0.0.0"
description = "An evidence-backed adaptive coding apprentice"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nikhil Singh" }]
dependencies = ["PyYAML>=6.0,<7"]

[project.scripts]
schemavore = "schemavore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/schemavore"]
